--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "my_bank",
   "version": "1.0.0",
   "description": "aplicativo de finanças pessoais",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.ts",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json .",
     "typeorm": "ts-node-dev node_modules/.bin/typeorm"
   },
@@ -26,6 +26,7 @@
     "@types/express": "^4.17.14",
     "eslint": "6.8",
     "eslint-config-trybe-backend": "1.0",
+    "nodemon": "^2.0.20",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   }
