--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.ts",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.ts",
+    "dev": "nodemon src/server.js",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json .",
     "typeorm": "ts-node-dev node_modules/.bin/typeorm"
   },
