feat: create folder structure

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,8 +9,7 @@
     "prestart": "npx sequelize-cli db:create && npx sequelize-cli db:migrate",
     "drop": "npx sequelize-cli db:drop",
     "seed": "npx sequelize-cli db:seed:all",
-    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json .",
-    "typeorm": "ts-node-dev node_modules/.bin/typeorm"
+    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
   "keywords": [],
   "author": "Micael Santos",
